=head1 NAME

Changes - Apache::Test change logfile

=head1 CHANGES

=over 3

=item 1.08_dev

In order to make Apache-Test compatible with the rest of Perl testing
frameworks, we no longer chdir into t/, but run from the root of the
project (where t/ resides). A test needing to know where it's running
from (e.g. to read/write files/dirs on the filesystem), should do that
relative to the serverroot, documentroot and other server
configuration variables, available via
Apache::Test::vars('serverroot'), Apache::Test::vars('documentroot'),
etc. [Stas]

Apache::Test::vars() can now query for config arguments [Stas]

generate t/conf if it does not already exist, which
it may not if the tests are entirely autoconfigured.
[Geoffrey Young]

Special to Apache-Test environment variables:
APXS APACHE APACHE_GROUP APACHE_USER APACHE_PORT
are now moved to:
APACHE_TEST_APXS APACHE_TEST_HTTPD APACHE_TEST_GROUP 
APACHE_TEST_USER APACHE_TEST_PORT
respectively, for consistency with other APACHE_TEST_ env vars and in
order not to interfere with other projects that may use the same env
vars. [Stas]

if $self->{reconfigure} is true, make sure to perform a complete
reconfiguration, to solve the bug where conf.in files weren't reparsed
and vhost hostport info was getting lost on subsequent runs when
APACHE env var was set (one of the cases when $self->{reconfigure} is
true). [Stas]

handle "Include conf/*conf" cases when inheriting httpd.conf in a
cleaner way, don't complain that "*conf" doesn't exist, since it's a
glob pattern. Instead check try to resolve the base directory. [Stas]

import the Apache::TestMM clean target in Makefile.PL so 'make clean'
will call t/TEST -clean [Stas]

fix have_apache_version(), have_min_apache_version(), and
have_min_module_version() to use proper numeric version strings 
in comparisons.  thanks to Rafael Garcia-Suarez for the spot.
[Geoffrey Young]

fix Apache::TestConfig::which to check that the found file is a plain
file [Stas]
